# waybar-battery-module

./: .gitignore  PKGBUILD  README.md  meson.build
src/: client.vala  login1_interface.vala  main.vala
upower-glib/: upower-glib.files  upower-glib.gi  upower-glib.vapi
vapi/: upower-glib.vapi
waybar_test/: config
